[package]
name = "benchmon"
version = "0.1.0"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5", features = [ "attributes" ] }
heim = { version = "0.1.0-alpha", features = [ "cpu",
                                               "disk",
                                               "host",
                                               "memory",
                                               "net",
                                               "process",
                                               "sensors",
                                               "runtime-async-std",
                                               "virt" ] }
futures-util = "0.3"