[package]
name = "benchmon"
version = "0.1.0"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]
edition = "2018"
description = "A benchmarking-oriented system monitor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5", features = [ "attributes" ] }
chrono = { version = "0.4", default-features = false }
futures-util = "0.3"
heim = { version = "0.1.0-alpha", features = [ "cpu",
                                               "disk",
                                               "host",
                                               "memory",
                                               "net",
                                               "process",
                                               "sensors",
                                               "runtime-async-std",
                                               "virt" ] }
slog = "2.5"
slog-term = "2.5"
structopt = "0.3"
termize = "0.1"
unicode-segmentation = "1.6.0"
